force-app/main/default/objects/C360_BuyingPerformanceDailyTOP__c.object
<CustomObject>
    <description>TOP Daily Buying Performance</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Customer__r.AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>IF(ISPICKVAL(Customer__r.AccountGroup__c , &apos;TRDF&apos;) , &apos;Oversea&apos; ,IF(ISPICKVAL(Customer__r.AccountGroup__c , &apos;TRDL&apos;) , &apos;Domestic&apos; , TEXT(Customer__r.AccountGroup__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddqtyL30__c</fullName>
        <label>Add.qty. - L30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddqtyLitre__c</fullName>
        <label>Add.qty. - Litre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddqtyMTTPX__c</fullName>
        <formula>AddqtyMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add.qty. -MT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddqtyMT__c</fullName>
        <label>Add.qty. - MT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountBFVatLocal__c</fullName>
        <description>Amount B/F Vat (Local)</description>
        <label>Amount B/F Vat (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountBFVatTHB__c</fullName>
        <label>Amount B/F Vat (THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountBFVatUSD__c</fullName>
        <description>Amount B/F Vat (USD</description>
        <label>Amount B/F Vat (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountTHBTLBReport__c</fullName>
        <description>Use in TLB Summary Sales Report</description>
        <formula>IF( ISPICKVAL(SalesOrganization__c, &apos;1300&apos;), 
(AddqtyMT__c  *  UnitPriceUSDTemporary__c)*  Exchangerate__c, 
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount(THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountUSDTLBReport__c</fullName>
        <description>Use in TPX Sales Summary Report</description>
        <formula>IF( ISPICKVAL(SalesOrganization__c, &apos;1300&apos;),
AddqtyMT__c * UnitPriceUSDTemporary__c,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount(USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Price_MT_THB__c</fullName>
        <formula>IF(AddqtyMT__c&gt; 0,AmountBFVatTHB__c/AddqtyMT__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Price/MT (THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Price_MT_USD__c</fullName>
        <formula>IF(AddqtyMT__c&gt; 0,AmountBFVatUSD__c/AddqtyMT__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Price/MT (USD)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLDate__c</fullName>
        <description>Labix Summary Sales Report</description>
        <label>B/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BertingTLBReport__c</fullName>
        <description>Use in TLB Summary Sales Report</description>
        <formula>IF( ISPICKVAL(SalesOrganization__c, &apos;1300&apos;),
 QuantityL30__c  * 0.03,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Berting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BilledQuantity__c</fullName>
        <label>Billed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingDate__c</fullName>
        <description>Billing Date</description>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingDocument__c</fullName>
        <description>Labix Summary Sales Report</description>
        <label>Billing Document</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingType__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingYearMonth__c</fullName>
        <label>Billing Date (Year-Month)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COGS__c</fullName>
        <label>COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetNetProfitLocal__c</fullName>
        <label>CP target Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetNetProfitUSD__c</fullName>
        <label>CP target Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetPocketMarginLocal__c</fullName>
        <label>CP target Pocket Margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetPocketMarginUSD__c</fullName>
        <label>CP target Pocket Margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPtargetVolume__c</fullName>
        <label>CP target Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <label>Cancelled</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckBBL__c</fullName>
        <description>Check (BBL)</description>
        <label>Check (BBL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckL15__c</fullName>
        <description>Check (L15)</description>
        <label>Check (L15)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckL30__c</fullName>
        <description>Check (L30)</description>
        <label>Check (L30)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckMT__c</fullName>
        <description>Check (MT)</description>
        <label>Check (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractLineItemReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Report</label>
        <referenceTo>C360_ContractLineItemReport__c</referenceTo>
        <relationshipLabel>Daily Buying Performance</relationshipLabel>
        <relationshipName>Daily_Buying_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CumCPTargetVolume__c</fullName>
        <label>Cum CP Target Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetNetProfitLocal__c</fullName>
        <label>Cum CP target Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetNetProfitUSD__c</fullName>
        <label>Cum CP target Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetPocketMarginLocal__c</fullName>
        <label>Cum CP target Pocket Margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CumCPtargetPocketMarginUSD__c</fullName>
        <label>Cum CP target Pocket Margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyLocal__c</fullName>
        <label>Currency (Local)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerText__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <description>Customer Type</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company Name</description>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TOP_Daily_Buying_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DONumber__c</fullName>
        <description>DO Number</description>
        <label>DO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryQuantity__c</fullName>
        <description>Delivery Quantity</description>
        <label>Delivery Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiffShoreVSShipTankLitre30__c</fullName>
        <label>Diff Shore VS Ship Tank (Litre@30)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiffShoreVSShipTankMT__c</fullName>
        <label>Diff Shore VS Ship Tank (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchangerate__c</fullName>
        <label>Exchange rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExciseDutyCurrZEX1__c</fullName>
        <label>Excise Duty Curr (ZEX1)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExciseDutyCurrZEX2__c</fullName>
        <label>Excise Duty Curr (ZEX2)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExciseDutyZEX1__c</fullName>
        <description>Excise Duty (ZEX1)</description>
        <label>Excise Duty (ZEX1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExciseDutyZEX2__c</fullName>
        <description>Excise Duty (ZEX2)</description>
        <label>Excise Duty (ZEX2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExportInvoiceNo__c</fullName>
        <description>Labix Summary Sales Report</description>
        <label>Export Invoice No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreightChargeTHB__c</fullName>
        <description>Labix Summary Sales Report</description>
        <label>Freight Charge(THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightChargeUSD__c</fullName>
        <description>Labix Summary Sales Report</description>
        <label>Freight Charge(USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightcostLocal__c</fullName>
        <label>Freight cost (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FreightcostUSD__c</fullName>
        <label>Freight cost (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>Product Transfer Pipe Report</description>
        <label>From</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Incoterm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterGroup__c</fullName>
        <label>InterGroup</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceTaxInv__c</fullName>
        <description>Labix Summary Sales Report</description>
        <label>Invoice/Tax Inv.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemNumber__c</fullName>
        <description>Item Number</description>
        <label>Item Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyJetty__c</fullName>
        <formula>IF( RecordType.Name = &apos;Transfer Jetty&apos;, 
ProductGroupReport__c &amp;&quot;_&quot;&amp; 
Destination__c &amp;&quot;_&quot;&amp;
 TripNo__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Jetty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyReport__c</fullName>
        <description>Use for TPX Labix Report</description>
        <formula>IF( OR(ISPICKVAL( SalesOrganization__c ,&apos;1300&apos;),
ISPICKVAL(SalesOrganization__c, &apos;1700&apos;)) ,
TEXT(SalesOrganization__c) &amp;&quot;_&quot;&amp;
TEXT(DistributionChannel__c) &amp;&quot;_&quot;&amp;
Customer__r.AccountNumber__c  &amp;&quot;_&quot;&amp;
Product__r.MaterialCode__c &amp;&quot;_&quot;&amp;
TEXT(Salesunit__c),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LGL15__c</fullName>
        <description>% L/G (L15)</description>
        <label>% L/G (L15)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LGL30__c</fullName>
        <label>% L/G (L30)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LoadingPort__c</fullName>
        <label>Loading Port</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LossGainfxLocal__c</fullName>
        <label>Loss/Gain fx (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LossGainfxUSD__c</fullName>
        <label>Loss/Gain fx (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaterialGroup2__c</fullName>
        <label>Material Group 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetProfitLocal__c</fullName>
        <label>Net Profit (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetProfitUSD__c</fullName>
        <label>Net Profit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValueLocal__c</fullName>
        <label>Net Value (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValueUSD__c</fullName>
        <label>Net Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <description>PO Number</description>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackType__c</fullName>
        <label>Pack Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayBBL__c</fullName>
        <description>Pay (BBL)</description>
        <label>Pay (BBL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayL15__c</fullName>
        <label>Pay (L15)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayL30__c</fullName>
        <description>Pay (L30)</description>
        <label>Pay (L30)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayMT__c</fullName>
        <description>Pay (MT)</description>
        <label>Pay (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlantName__c</fullName>
        <label>Plant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PocketmarginLocal__c</fullName>
        <label>Pocket margin (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PocketmarginUSD__c</fullName>
        <label>Pocket margin (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricingdate__c</fullName>
        <label>Pricing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Product__r.MaterialCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroupReport__c</fullName>
        <formula>CASE( Product__r.MaterialCode__c , 
&apos;YPX&apos;, &apos;PX&apos;, 
&apos;YTOL&apos;, &apos;TOL&apos;,
&apos;YBZ&apos;, &apos;BZ&apos;,
&apos;YMX&apos;, &apos;MX&apos;,
 Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>Product Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNameText__c</fullName>
        <label>ProductNameText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>C360_Product__c</referenceTo>
        <relationshipName>TOP_Daily_Buying_Performance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuantityBBL15__c</fullName>
        <label>Quantity (BBL15)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityBBL__c</fullName>
        <description>TPX Summary Sales Report</description>
        <label>Quantity (BBL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityL30__c</fullName>
        <description>Quantity (L30)</description>
        <label>Quantity (L30)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityLGL15__c</fullName>
        <description>Quantity L/G (L15)</description>
        <label>Qty L/G (L15)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityLGL30__c</fullName>
        <description>Quantity L/G L30</description>
        <label>Qty L/G (L30)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityMTAdjust__c</fullName>
        <formula>IF(  SalesPriceZPR2__c = 0,  AddqtyMT__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity (MT) Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityMTTNXReport__c</fullName>
        <formula>IF( RecordType.Name = &apos;Daily Performance&apos;, AddqtyMT__c, 
 IF( RecordType.Name = &apos;TX Daily Performance&apos;, DeliveryQuantity__c, 
    null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity(MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityMTTPX__c</fullName>
        <description>Use in TPX Report for Quantity in 3 Digits</description>
        <formula>QuantityMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity(MT)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuantityMT__c</fullName>
        <label>Quantity (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevenueLocal__c</fullName>
        <label>Revenue (Local)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevenueUSD__c</fullName>
        <label>Revenue (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SU__c</fullName>
        <label>Unit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <description>Sales Organization</description>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesPriceCurrZPR1__c</fullName>
        <label>Sales Price Curr (ZPR1)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesPriceCurrZPR2__c</fullName>
        <label>Sales Price Curr (ZPR2)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesPriceZPR1__c</fullName>
        <description>Sales Price (ZPR1)</description>
        <label>Sales Price (ZPR1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPriceZPR2__c</fullName>
        <description>Sales Price (ZPR1)</description>
        <label>Sales Price (ZPR2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesgroup__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesmode__c</fullName>
        <label>Sales mode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesunit__c</fullName>
        <label>Sales unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SearchTerm__c</fullName>
        <description>SearchTerm</description>
        <label>SearchTerm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTankLitre30__c</fullName>
        <label>Ship Tank (Litre@30)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShipTankMT__c</fullName>
        <label>Ship Tank (MT)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ship-to party Number</description>
        <label>ship-to party Number</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TOP_Daily_Buying_Performance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingPoint__c</fullName>
        <label>Shipping Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ShippingPointDaily</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShiptoName__c</fullName>
        <label>Ship to Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shiptocountry__c</fullName>
        <description>Labix Summary Sales Report</description>
        <label>Ship to country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShoreTankLitre30__c</fullName>
        <label>Shore Tank (Litre@30)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShoreTankMT__c</fullName>
        <label>Shore Tank (MT)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SoldToText__c</fullName>
        <label>Sold To Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subindustry__c</fullName>
        <label>Sub industry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplygroup__c</fullName>
        <label>Supply group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tank__c</fullName>
        <label>Tank</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxamountTHB__c</fullName>
        <description>TLB Summary Sales Report</description>
        <label>Tax amount(THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxamountUSD__c</fullName>
        <description>TLB Summary Sales Report</description>
        <label>Tax amount(USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taxamount__c</fullName>
        <label>Tax amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Product Transfer Pipe</description>
        <label>To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalTHB__c</fullName>
        <label>Total (THB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalUSD__c</fullName>
        <label>Total (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TripNo__c</fullName>
        <description>Product Transfer Pipe Report</description>
        <label>Trip No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceUSDTemporary__c</fullName>
        <formula>IF( ISPICKVAL(SalesOrganization__c, &apos;1300&apos;),
UnitPriceUSD__c/10,
Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPriceUSD__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VesselName__c</fullName>
        <label>Vessel Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Daily Buying Performance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BillingDate__c</columns>
        <columns>SalesOrganization__c</columns>
        <columns>DistributionChannel__c</columns>
        <columns>ShippingPoint__c</columns>
        <columns>Product__c</columns>
        <columns>QuantityMT__c</columns>
        <columns>QuantityL30__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>Daily Performance</label>
        <sharedTo>
            <group>C360_All1300</group>
            <group>C360_All1400</group>
            <group>C360_All1700</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TXDailyPerformance</fullName>
        <columns>NAME</columns>
        <columns>BillingDate__c</columns>
        <columns>SalesOrganization__c</columns>
        <columns>DistributionChannel__c</columns>
        <columns>ShippingPoint__c</columns>
        <columns>Product__c</columns>
        <columns>DeliveryQuantity__c</columns>
        <columns>NetValueLocal__c</columns>
        <columns>NetProfitLocal__c</columns>
        <columns>CurrencyLocal__c</columns>
        <filterScope>Everything</filterScope>
        <label>TX Daily Performance</label>
        <sharedTo>
            <group>C360_9100</group>
            <group>C360_TRDF_2000</group>
            <group>C360_TRDF_9200</group>
            <group>C360_TRDF_9300</group>
            <group>C360_TRDL_2000</group>
            <group>C360_TRDL_9200</group>
            <group>C360_TRDL_9300</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BPD{00000000}</displayFormat>
        <label>Daily Buying Performance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>DailyPerformance</fullName>
        <active>true</active>
        <description>TLB TPX LABIX</description>
        <label>Daily Performance</label>
    </recordTypes>
    <recordTypes>
        <fullName>TXDailyPerformance</fullName>
        <active>true</active>
        <description>TSTH TSV TSR TSChem TSJSKem</description>
        <label>TX Daily Performance</label>
    </recordTypes>
</CustomObject>